--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
-  <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-  
-  <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
+    <title>Week 9 Homework</title>
+    <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
 
-
+    <!-- CSS file -->
+    <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 </head>
+
 <body>
-  
-<div id="choropleth_map"></div>
+    <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
 
-<script type="text/javascript">
+    <div id="choropleth_map"></div>
 
-  var spec2 = "js/Week9Homework.vg.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
-  }).catch(console.error);
-</script>
+    <script type="text/javascript">
+
+        var spec2 = "js/Week9Homework.vg.json";
+        vegaEmbed('#choropleth_map', spec2).then(function (result) {
+        }).catch(console.error);
+    </script>
 
 </body>
+
 </html>
