--- a/index.html
+++ b/index.html
@@ -17,10 +17,18 @@
 
     <div id="choropleth_map"></div>
 
+    <h2>Week 10 Homework, Interactive Charts with Vega-Lite</h2>
+
+    <div id="stacked_bar_chart"></div>
+
     <script type="text/javascript">
 
         var spec2 = "js/Week9Homework.vg.json";
         vegaEmbed('#choropleth_map', spec2).then(function (result) {
+        }).catch(console.error);
+
+        var spec3 = "js/Week10Homework.vg.json";
+        vegaEmbed('#stacked_bar_chart', spec3).then(function (result) {
         }).catch(console.error);
     </script>
 
