Adjust visualisation position

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
     <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
 
-    <div id="choropleth_map"></div>
+    <div id="choropleth_map" class="visualisation-container"></div>
 
-    <h2>Week 10 Homework, Interactive Charts with Vega-Lite</h2>
+    <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
 
-    <div id="stacked_bar_chart"></div>
+    <div id="stacked_bar_chart" class="visualisation-container"></div>
 
     <script type="text/javascript">
 
