Add a line break to create space for the second heading

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
     <div id="choropleth_map" class="visualisation-container"></div>
 
+    <!-- Add a line break to create space -->
+    <br>
+
     <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
 
     <div id="stacked_bar_chart" class="visualisation-container"></div>
