Add extra space for line break

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="choropleth_map" class="visualisation-container"></div>
 
     <!-- Add a line break to create space -->
-    <br>
+    <br class="element-with-extra-space">
 
     <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
 
