--- a/index.html
+++ b/index.html
@@ -2,27 +2,52 @@
 <html>
 
 <head>
-    <title>Week 9 Homework</title>
+    <title>FIT3179 Homework</title>
     <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+
+    <!-- Import pure.css -->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
+        integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS file -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 </head>
 
 <body>
-    <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
+    
+    <div class="page">
 
-    <div id="choropleth_map" class="visualisation-container"></div>
+        <!-- pure grid group -->
+        <div class="pure-g">
+          <div class="pure-u-1-1">
+            <h1>2018 Criminal Cases in India</h1>
+            <p>Visualisation by: <strong>Choon Seong</strong></p>
+          </div>
+        </div>
+        <!-- end pure grid group -->
 
-    <!-- Add a line break to create space -->
-    <br class="element-with-extra-space">
+        <div class="pure-g">
+            <div class="pure-u-1-2">
+                <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
+            </div>
+            <div class="pure-u-1-2">
+                <div id="choropleth_map" class="vis-container"></div>
+            </div>
+        </div>
 
-    <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
-
-    <div id="stacked_bar_chart" class="visualisation-container"></div>
+        <div class="pure-g">
+            <div class="pure-u-1-2">
+                <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
+            </div>
+            <div class="pure-u-1-2">
+                <div id="stacked_bar_chart" class="vis-container"></div>
+            </div>
+        </div>
+    </div>
 
     <script type="text/javascript">
 
