--- a/index.html
+++ b/index.html
@@ -18,32 +18,38 @@
 </head>
 
 <body>
-    
+
     <div class="page">
 
         <!-- pure grid group -->
         <div class="pure-g">
-          <div class="pure-u-1-1">
-            <h1>2018 Criminal Cases in India</h1>
-            <p>Visualisation by: <strong>Choon Seong</strong></p>
-          </div>
+            <div class="pure-u-1-1">
+                <h1>2018 Criminal Cases in India</h1>
+                <p>Visualisation by: <strong>Choon Seong</strong></p>
+            </div>
         </div>
         <!-- end pure grid group -->
 
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-1">
                 <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
             </div>
-            <div class="pure-u-1-2">
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
                 <div id="choropleth_map" class="vis-container"></div>
             </div>
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-1">
                 <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
             </div>
-            <div class="pure-u-1-2">
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
                 <div id="stacked_bar_chart" class="vis-container"></div>
             </div>
         </div>
