--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <div class="pure-u-1-1">
                 <h1>2018 Criminal Cases in India</h1>
                 <p>Visualisation by: <strong>Choon Seong</strong></p>
+                <p>India is known as one of the world's most populous countries. Many of the people in India face tough times because of poverty and some rules that can be unfair. Not everyone gets the right kind of education, and that causes increment of criminal cases in India. Therefore it is a valuable exercise to examine these issues in an Indian context to gain insights into regional variations and challenges faced by law enforcement. </p>
             </div>
         </div>
         <!-- end pure grid group -->
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Week 9 Homework, Create a Map with Vega-Lite</h1>
+                <h1></h1>
             </div>
         </div>
 
@@ -44,25 +45,55 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Week 10 Homework, Interactive Charts with Vega-Lite</h1>
+                <h1></h1>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <div id="stacked_bar_chart" class="vis-container"></div>
+                <div id="diverging_bar_chart" class="vis-container"></div>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+                <div id="diverging_bar_chart" class="vis-container"></div>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+                <div id="radial_chart" class="vis-container"></div>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+                <div id="h_stacked_bar_chart" class="vis-container"></div>
             </div>
         </div>
     </div>
 
     <script type="text/javascript">
 
-        var spec2 = "js/Week9Homework.vg.json";
+        var spec2 = "js/No_of_Rape_Cases.vg.json";
         vegaEmbed('#choropleth_map', spec2).then(function (result) {
         }).catch(console.error);
 
-        var spec3 = "js/Week10Homework.vg.json";
-        vegaEmbed('#stacked_bar_chart', spec3).then(function (result) {
+        var spec3 = "js/RapeType.vg.json";
+        vegaEmbed('#diverging_bar_chart', spec3).then(function (result) {
+        }).catch(console.error);
+
+        var spec4 = "js/EscapesFrom.vg.json";
+        vegaEmbed('#diverging_bar_chart', spec4).then(function (result) {
+        }).catch(console.error);
+
+        var spec5 = "js/PoliceNegligence.vg.json";
+        vegaEmbed('#radial_chart', spec5).then(function (result) {
+        }).catch(console.error);
+
+        var spec6 = "js/EscapesStatus.vg.json";
+        vegaEmbed('#h_stacked_bar_chart', spec6).then(function (result) {
         }).catch(console.error);
     </script>
 
