--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-1">
+            <div class="pure-u-1-2">
                 <div id="choropleth_map" class="vis-container"></div>
+            </div>
+            <div class="pure-u-1-2">
+                <h1>Rape Cases in Each State of India</h1>
+                <p>This is chart 1</p>
             </div>
         </div>
 
@@ -50,19 +54,20 @@
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-1">
+            <div class="pure-u-1-2">
                 <div id="diverging_bar_chart1" class="vis-container"></div>
             </div>
-        </div>
-
-        <div class="pure-g">
-            <div class="pure-u-1-1">
+            <div class="pure-u-1-2">
                 <div id="diverging_bar_chart2" class="vis-container"></div>
             </div>
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-1">
+            <div class="pure-u-1-2">
+                <h1>Number of Police Negligence in Each State of India (More than 3)</h1>
+                <p>This is chart 2</p>
+            </div>
+            <div class="pure-u-1-2">
                 <div id="radial_chart" class="vis-container"></div>
             </div>
         </div>
