Add story telling aspect to visualisation

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
             <div class="pure-u-1-1">
                 <h1>2018 Criminal Cases in India</h1>
                 <p>Visualisation by: <strong>Choon Seong</strong></p>
-                <p>India is known as one of the world's most populous countries. Many of the people in India face tough times because of poverty and some rules that can be unfair. Not everyone gets the right kind of education, and that causes increment of criminal cases in India. Therefore it is a valuable exercise to examine these issues in an Indian context to gain insights into regional variations and challenges faced by law enforcement. </p>
+                <p>India, with its staggering population, grapples with a complex tapestry of social, economic, and legal challenges. These factors often converge, resulting in an array of criminal cases. In 2018, a closer examination of these cases provides invaluable insights into regional disparities and the hurdles faced by law enforcement.</p>
             </div>
         </div>
         <!-- end pure grid group -->
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1></h1>
+                <h1>Rape Cases in Each State of India</h1>
+                <p>Among the distressing array of criminal cases, instances of rape have persistently troubled certain regions of India. Understanding the geographical distribution of these cases is pivotal in formulating targeted interventions.</p>
+                <p>The following map chart provides a visual representation of the concentration of rape cases in each state, shedding light on areas that require focused attention and resources.</p>
             </div>
         </div>
 
@@ -42,30 +44,39 @@
                 <div id="choropleth_map" class="vis-container"></div>
             </div>
             <div class="pure-u-1-2">
-                <h1>Rape Cases in Each State of India</h1>
                 <p>This is chart 1</p>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1></h1>
+                <h1>Vulnerable Populations and Security Challenges</h1>
+                <p>Understanding the dynamics of criminal cases extends beyond mere statistics; it requires a comprehensive exploration of the factors that contribute to both victimization and law enforcement challenges. In this section, we delve into two key aspects: the age distribution of victims and instances of persons escaping custody. These intertwined dimensions of criminal justice illuminate the vulnerabilities faced by specific age groups and the complexities encountered by law enforcement agencies. By examining these facets together, we gain a more holistic perspective on the multifaceted landscape of crime and its impact on communities.</p>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-2">
                 <div id="diverging_bar_chart1" class="vis-container"></div>
+                <p>This is chart 2</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="diverging_bar_chart2" class="vis-container"></div>
+                <p>This is chart 3</p>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+                <h1>Possible Reason for High Criminal Rate</h1>
+                <p>Drawing from the patterns and trends identified in the preceding visualisations, it becomes imperative to probe into the underlying reasons behind the high incidence of criminal cases in specific areas.</p>
+                <p>One of the possible reason for the high criminal rate is police negligence. Holding law enforcement accountable for negligence in preventing prisoner escapes is imperative for maintaining public trust and safety. The radial bar chart showcases cases brought against police for negligence, with particular attention to states where the incidence surpasses a threshold of significance. This data serves as a critical gauge of the need for systemic reforms within law enforcement agencies.</p>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-2">
-                <h1>Number of Police Negligence in Each State of India (More than 3)</h1>
-                <p>This is chart 2</p>
+                <p>This is chart 4</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="radial_chart" class="vis-container"></div>
@@ -74,7 +85,17 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
+                <h1>Law and Order Performance</h1>
+                <p>The data on escapes and subsequent apprehensions serves as a litmus test for law and order performance in different states. Analyzing the balance between re-arrested escapees and those remaining absconding provides critical insights into the effectiveness of law enforcement strategies in India.</p>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-2">
                 <div id="h_stacked_bar_chart" class="vis-container"></div>
+            </div>
+            <div class="pure-u-1-2">
+                <p>This is chart 5</p>
             </div>
         </div>
     </div>
