--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <div class="pure-g">
             <div class="pure-u-1-2">
-                <div id="choropleth_map" class="vis-container"></div>
+                <div id="choropleth_map" class="vis-container1"></div>
             </div>
             <div class="pure-u-1-2">
                 <p>This is chart 1</p>
