Change container class of radial chart

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>This is chart 4</p>
             </div>
             <div class="pure-u-1-2">
-                <div id="radial_chart" class="vis-container"></div>
+                <div id="radial_chart" class="vis-container2"></div>
             </div>
         </div>
 
