--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
     <div class="page">
 
-        <!-- pure grid group -->
         <div class="pure-g">
             <div class="pure-u-1-1">
                 <h1>2018 Criminal Cases in India</h1>
@@ -29,7 +28,6 @@
                 <p>India, with its staggering population, grapples with a complex tapestry of social, economic, and legal challenges. These factors often converge, resulting in an array of criminal cases. In 2018, a closer examination of these cases provides invaluable insights into regional disparities and the hurdles faced by law enforcement.</p>
             </div>
         </div>
-        <!-- end pure grid group -->
 
         <div class="pure-g">
             <div class="pure-u-1-1">
@@ -40,10 +38,10 @@
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-2-3">
                 <div id="choropleth_map" class="vis-container1"></div>
             </div>
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-3">
                 <p>This is chart 1</p>
             </div>
         </div>
@@ -75,11 +73,11 @@
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-3">
                 <p>This is chart 4</p>
             </div>
-            <div class="pure-u-1-2">
-                <div id="radial_chart" class="vis-container2"></div>
+            <div class="pure-u-2-3">
+                <div id="radial_chart" class="vis-container"></div>
             </div>
         </div>
 
@@ -91,10 +89,10 @@
         </div>
 
         <div class="pure-g">
-            <div class="pure-u-1-2">
+            <div class="pure-u-2-3">
                 <div id="h_stacked_bar_chart" class="vis-container"></div>
             </div>
-            <div class="pure-u-1-2">
+            <div class="pure-u-1-3">
                 <p>This is chart 5</p>
             </div>
         </div>
