--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <p>This is chart 4</p>
             </div>
             <div class="pure-u-2-3">
-                <div id="radial_chart" class="vis-container"></div>
+                <div id="radial_chart" class="vis-container2"></div>
             </div>
         </div>
 
