--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>FIT3179 Homework</title>
+    <title>FIT3179 Data Visualisation 2</title>
     <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
@@ -77,7 +77,7 @@
                 <p>This is chart 4</p>
             </div>
             <div class="pure-u-2-3">
-                <div id="radial_chart" class="vis-container2"></div>
+                <div id="radial_chart" class="vis-container"></div>
             </div>
         </div>
 
