add tooltip for radial graph

--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
     <div class="page">
 
         <div class="pure-g">
-            <div class="pure-u-1-1">
+            <div class="pure-u-1-1 title">
                 <h1>2018 Criminal Cases in India</h1>
-                <p>Visualisation by: <strong>Choon Seong</strong></p>
-                <p>India, with its staggering population, grapples with a complex tapestry of social, economic, and legal challenges. These factors often converge, resulting in an array of criminal cases. In 2018, a closer examination of these cases provides invaluable insights into regional disparities and the hurdles faced by law enforcement.</p>
+                <div class="right-content">
+                    <p>Visualisation by: <strong>Choon Seong</strong></p>
+                </div>
             </div>
         </div>
+        
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Rape Cases in Each State of India</h1>
+                <h2 class="vertical-line-header">Rape Cases in Each State of India</h2>
                 <p>Among the distressing array of criminal cases, instances of rape have persistently troubled certain regions of India. Understanding the geographical distribution of these cases is pivotal in formulating targeted interventions.</p>
                 <p>The following map chart provides a visual representation of the concentration of rape cases in each state, shedding light on areas that require focused attention and resources.</p>
             </div>
@@ -48,7 +50,7 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Vulnerable Populations and Security Challenges</h1>
+                <h2 class="vertical-line-header">Vulnerable Populations and Security Challenges</h2>
                 <p>Understanding the dynamics of criminal cases extends beyond mere statistics; it requires a comprehensive exploration of the factors that contribute to both victimization and law enforcement challenges. In this section, we delve into two key aspects: the age distribution of victims and instances of persons escaping custody. These intertwined dimensions of criminal justice illuminate the vulnerabilities faced by specific age groups and the complexities encountered by law enforcement agencies. By examining these facets together, we gain a more holistic perspective on the multifaceted landscape of crime and its impact on communities.</p>
             </div>
         </div>
@@ -66,7 +68,7 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Possible Reason for High Criminal Rate</h1>
+                <h2 class="vertical-line-header">Possible Reason for High Criminal Rate</h2>
                 <p>Drawing from the patterns and trends identified in the preceding visualisations, it becomes imperative to probe into the underlying reasons behind the high incidence of criminal cases in specific areas.</p>
                 <p>One of the possible reason for the high criminal rate is police negligence. Holding law enforcement accountable for negligence in preventing prisoner escapes is imperative for maintaining public trust and safety. The radial bar chart showcases cases brought against police for negligence, with particular attention to states where the incidence surpasses a threshold of significance. This data serves as a critical gauge of the need for systemic reforms within law enforcement agencies.</p>
             </div>
@@ -83,7 +85,7 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h1>Law and Order Performance</h1>
+                <h2 class="vertical-line-header">Law and Order Performance</h2>
                 <p>The data on escapes and subsequent apprehensions serves as a litmus test for law and order performance in different states. Analyzing the balance between re-arrested escapees and those remaining absconding provides critical insights into the effectiveness of law enforcement strategies in India.</p>
             </div>
         </div>
