--- a/index.html
+++ b/index.html
@@ -22,61 +22,57 @@
     <div class="page">
 
         <div class="pure-g">
-            <div class="pure-u-1-1 title">
+            <div class="pure-u-1-1 main">
                 <h1>2018 Criminal Cases in India</h1>
                 <div class="right-content">
-                    <p>Visualisation by: <strong>Choon Seong</strong></p>
+                    <p class="light">Visualisation by: <strong>Yap Choon Seong</strong></p>
                 </div>
             </div>
         </div>
-        
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 class="vertical-line-header">Rape Cases in Each State of India</h2>
+                <h2 class="vertical-line-header number">01 <span class="title">Cases in Each State of India</span></h2>
                 <p>Among the distressing array of criminal cases, instances of rape have persistently troubled certain regions of India. Understanding the geographical distribution of these cases is pivotal in formulating targeted interventions.</p>
-                <p>The following map chart provides a visual representation of the concentration of rape cases in each state, shedding light on areas that require focused attention and resources.</p>
+                <p>The following <strong>choropleth map</strong> provides a visual representation of the <strong>concentration of rape cases in each state</strong>, shedding light on areas that require focused attention and resources.</p>
             </div>
-        </div>
-
-        <div class="pure-g">
             <div class="pure-u-2-3">
                 <div id="choropleth_map" class="vis-container1"></div>
             </div>
             <div class="pure-u-1-3">
-                <p>This is chart 1</p>
+                <p>There are noticeable regional disparities in the reported cases of rape across Indian states and union territories. Some states have significantly higher rates per capita compared to others.</p>
+                <p><strong>States like Madhya Pradesh, Chhattisgarh, and Rajasthan</strong> exhibit <strong>high normalized rates of reported rape cases</strong>. These states have reported more cases relative to their population size.</p>
+                <p>Therefore, states with <strong>higher rape cases reported rate</strong> may need to focus on <strong>implementing and reinforcing policies aimed at preventing and addressing sexual violence</strong>. This could include measures such as increased law enforcement, better support systems for survivors, and community education.</p>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 class="vertical-line-header">Vulnerable Populations and Security Challenges</h2>
-                <p>Understanding the dynamics of criminal cases extends beyond mere statistics; it requires a comprehensive exploration of the factors that contribute to both victimization and law enforcement challenges. In this section, we delve into two key aspects: the age distribution of victims and instances of persons escaping custody. These intertwined dimensions of criminal justice illuminate the vulnerabilities faced by specific age groups and the complexities encountered by law enforcement agencies. By examining these facets together, we gain a more holistic perspective on the multifaceted landscape of crime and its impact on communities.</p>
+                <h2 class="vertical-line-header number">02 <span class="title">Vulnerable Populations and Security Challenges</span></h2>
+                <p>Understanding the dynamics of criminal cases extends beyond mere statistics; it requires a comprehensive exploration of the factors that contribute to both <strong>victimization and law enforcement challenges</strong>. In this section, we delve into two key aspects: <strong>the age distribution of victims and instances of persons escaping custody</strong>. These intertwined dimensions of criminal justice illuminate the <strong>vulnerabilities faced by specific age groups and the complexities encountered by law enforcement agencies</strong>. By examining these facets together, we gain a more holistic perspective on the <strong>multifaceted landscape of crime</strong> and its <strong>impact on communities</strong>.</p>
             </div>
-        </div>
-
-        <div class="pure-g">
             <div class="pure-u-1-2">
                 <div id="diverging_bar_chart1" class="vis-container"></div>
-                <p>This is chart 2</p>
+                <p>The data shows that <strong>many of the state has much more women rape victims compared to child rape victims</strong>. It shows that states with a <strong>higher number of child victims</strong> may need to focus on <strong>implementing and enforcing policies targeted at protecting children from sexual violence</strong> while the states with a <strong>higher number of women victims</strong> may need to <strong>prioritize initiatives aimed at empowering women</strong>, including education, economic opportunities, and campaigns against gender-based violence.</p>
+                <p>It's important to recognize that <strong>some states like Madhya Pradesh which have relatively high rape victims for both child and women</strong>. Policies and support systems should be sensitive to these complexities.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="diverging_bar_chart2" class="vis-container"></div>
-                <p>This is chart 3</p>
+                <p>States like Assam and Punjab show a </strong>higher number of escapes from police lockups</strong>. This may indicate <strong>potential weaknesses in the security and management of detention facilities</strong>.</p>
+                <p>States like Uttar Pradesh and Andhra Pradesh have a <strong>higher number of escapes occurring outside lockup facilities</strong>. This suggests that there may be <strong>challenges in apprehending individuals who escape before being placed in detention</strong>.</p>
+                <p>There are states which have high number for both types of escapes. Therefore, the states should focus on both of the issue seriously</p>
             </div>
         </div>
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 class="vertical-line-header">Possible Reason for High Criminal Rate</h2>
-                <p>Drawing from the patterns and trends identified in the preceding visualisations, it becomes imperative to probe into the underlying reasons behind the high incidence of criminal cases in specific areas.</p>
-                <p>One of the possible reason for the high criminal rate is police negligence. Holding law enforcement accountable for negligence in preventing prisoner escapes is imperative for maintaining public trust and safety. The radial bar chart showcases cases brought against police for negligence, with particular attention to states where the incidence surpasses a threshold of significance. This data serves as a critical gauge of the need for systemic reforms within law enforcement agencies.</p>
+                <h2 class="vertical-line-header number">03 <span class="title">Possible Reason for High Criminal Rate</span></h2>
+                <p>Drawing from the patterns and trends identified in the preceding visualisations, it becomes imperative to probe into the underlying reasons behind the <strong>high incidence of criminal cases in specific areas</strong>.</p>
+                <p>One of the possible reason for the high criminal rate is <strong>police negligence</strong>. Holding law enforcement accountable for negligence in preventing prisoner escapes is imperative for <strong>maintaining public trust and safety</strong>. The radial bar chart showcases cases brought against police for negligence, with particular attention to states where the incidence surpasses a threshold of significance. This data serves as a critical gauge of the <strong>need for systemic reforms within law enforcement agencies</strong>.</p>
             </div>
-        </div>
-
-        <div class="pure-g">
             <div class="pure-u-1-2">
-                <p>This is chart 4</p>
+                <p>The radial chart shows the states/union territories that have <strong>more than 3 cases</strong> against police for negligence. It can be seen that there are <strong>4 states/union territories that have more than 10 cases against police for negligence</strong>.</p>
+                <p>Especially <strong>Uttar Pradesh</strong>, it has a total of <strong>52 cases</strong> against police for negligence. Therefore these states with high numbers of reported cases may <strong>need to review and enhance their internal oversight mechanisms</strong>. This could include improved training, stricter accountability measures, and better reporting systems.</p>
             </div>
             <div class="pure-u-1-2">
                 <div id="radial_chart" class="vis-container"></div>
@@ -85,17 +81,16 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                <h2 class="vertical-line-header">Law and Order Performance</h2>
-                <p>The data on escapes and subsequent apprehensions serves as a litmus test for law and order performance in different states. Analyzing the balance between re-arrested escapees and those remaining absconding provides critical insights into the effectiveness of law enforcement strategies in India.</p>
+                <h2 class="vertical-line-header number">04 <span class="title">Law and Order Performance</span></h2>
+                <p>The data on escapes and subsequent apprehensions serves as a litmus test for <strong>law and order performance in different states</strong>. Analyzing the balance between re-arrested escapees and those remaining absconding provides critical insights into the <strong>effectiveness of law enforcement strategies in India</strong>.</p>
             </div>
-        </div>
-
-        <div class="pure-g">
-            <div class="pure-u-2-3">
+            <div class="pure-u-1-1">
                 <div id="h_stacked_bar_chart" class="vis-container"></div>
             </div>
-            <div class="pure-u-1-3">
-                <p>This is chart 5</p>
+            <div class="pure-u-1-1">
+                <p>The chart allows for a clear comparison between the number of escapes where individuals remain at large (absconding) and those who were successfully re-arrested.</p>
+                <p><strong>Most of the states</strong> especially Madhya Pradesh, Uttar Pradesh, and Maharashtra have a <strong>higher</strong> number of cases where individuals have <strong>absconded</strong> after escaping police custody. This indicates most of the states of India is facing <strong>potential challenges in locating and apprehending escapees</strong>. Therefore, they need to review and improve their protocols for tracking and apprehending escapees</p>
+                <p><strong>Only Assam</strong> show a <strong>higher</strong> number of cases where individuals were <strong>successfully re-arrested</strong> after escaping. This suggests that law enforcement agencies in Assam have been effective in recapturing escapees.</p>
             </div>
         </div>
     </div>
