--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
                 <p>Understanding the dynamics of criminal cases extends beyond mere statistics; it requires a comprehensive exploration of the factors that contribute to both <strong>victimization and law enforcement challenges</strong>. In this section, we delve into two key aspects: <strong>the age distribution of victims and instances of persons escaping custody</strong>. These intertwined dimensions of criminal justice illuminate the <strong>vulnerabilities faced by specific age groups and the complexities encountered by law enforcement agencies</strong>. By examining these facets together, we gain a more holistic perspective on the <strong>multifaceted landscape of crime</strong> and its <strong>impact on communities</strong>.</p>
             </div>
             <div class="pure-u-1-2">
+                <h3>Child vs Women Victims of Rape in India (2018)</h3>
                 <div id="diverging_bar_chart1" class="vis-container"></div>
                 <p>The data shows that <strong>many of the state has much more women rape victims compared to child rape victims</strong>. It shows that states with a <strong>higher number of child victims</strong> may need to focus on <strong>implementing and enforcing policies targeted at protecting children from sexual violence</strong> while the states with a <strong>higher number of women victims</strong> may need to <strong>prioritize initiatives aimed at empowering women</strong>, including education, economic opportunities, and campaigns against gender-based violence.</p>
                 <p>It's important to recognize that <strong>some states like Madhya Pradesh which have relatively high rape victims for both child and women</strong>. Policies and support systems should be sensitive to these complexities.</p>
             </div>
             <div class="pure-u-1-2">
+                <h3>Persons Escaped From Lockup vs Outside Lockup in India (2018)</h3>
                 <div id="diverging_bar_chart2" class="vis-container"></div>
                 <p>States like Assam and Punjab show a </strong>higher number of escapes from police lockups</strong>. This may indicate <strong>potential weaknesses in the security and management of detention facilities</strong>.</p>
                 <p>States like Uttar Pradesh and Andhra Pradesh have a <strong>higher number of escapes occurring outside lockup facilities</strong>. This suggests that there may be <strong>challenges in apprehending individuals who escape before being placed in detention</strong>.</p>
@@ -75,6 +77,7 @@
                 <p>Especially <strong>Uttar Pradesh</strong>, it has a total of <strong>52 cases</strong> against police for negligence. Therefore these states with high numbers of reported cases may <strong>need to review and enhance their internal oversight mechanisms</strong>. This could include improved training, stricter accountability measures, and better reporting systems.</p>
             </div>
             <div class="pure-u-1-2">
+                <h3>Comparison of Cases against Police for Negligence in Each State</h3>
                 <div id="radial_chart" class="vis-container"></div>
             </div>
         </div>
@@ -85,6 +88,7 @@
                 <p>The data on escapes and subsequent apprehensions serves as a litmus test for <strong>law and order performance in different states</strong>. Analyzing the balance between re-arrested escapees and those remaining absconding provides critical insights into the <strong>effectiveness of law enforcement strategies in India</strong>.</p>
             </div>
             <div class="pure-u-1-1">
+                <h3>Escaped prisoners status in India (2018)</h3>
                 <div id="h_stacked_bar_chart" class="vis-container"></div>
             </div>
             <div class="pure-u-1-1">
@@ -94,6 +98,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="bottom-page">
+        <p>Source: Kaggle, <a href="https://www.kaggle.com/datasets/nehaprabhavalkar/crime-in-india">https://www.kaggle.com/datasets/nehaprabhavalkar/crime-in-india</a></p>
+    </footer>
 
     <script type="text/javascript">
 
